data/forge_javadoc/1.9.4/raw/net/minecraft/client/gui/inventory/GuiInventory.md
---
title: "GuiInventory"
description: "public class GuiInventory extends InventoryEffectRenderer"
package: "net/minecraft/client/gui/inventory"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/client/gui/inventory/GuiInventory.html"
sourceType: javadoc
---

# GuiInventory

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.inventory.GuiContainer → net.minecraft.client.renderer.InventoryEffectRenderer → net.minecraft.client.gui.inventory.GuiInventory

## Class signature

```java
public class GuiInventory extends InventoryEffectRenderer
```

## Methods

- `protected void actionPerformed(GuiButton button)`
- `static void drawEntityOnScreen(int posX, int posY, int scale, float mouseX, float mouseY, EntityLivingBase ent)`
- `protected void drawGuiContainerBackgroundLayer(float partialTicks, int mouseX, int mouseY)`
- `protected void drawGuiContainerForegroundLayer(int mouseX, int mouseY)`
- `void drawScreen(int mouseX, int mouseY, float partialTicks)`
- `void initGui()`
- `void updateScreen()`

## Fields

- `GuiInventory`
