data/forge_javadoc/1.12.2/raw/net/minecraft/client/gui/inventory/GuiInventory.md
---
title: "GuiInventory"
description: "public class GuiInventory extends InventoryEffectRenderer implements IRecipeShownListener"
package: "net/minecraft/client/gui/inventory"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/client/gui/inventory/GuiInventory.html"
sourceType: javadoc
---

# GuiInventory

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.inventory.GuiContainer → net.minecraft.client.renderer.InventoryEffectRenderer → net.minecraft.client.gui.inventory.GuiInventory

## Class signature

```java
public class GuiInventory extends InventoryEffectRenderer implements IRecipeShownListener
```

## Methods

- `protected void actionPerformed(GuiButton button)`
- `static void drawEntityOnScreen(int posX, int posY, int scale, float mouseX, float mouseY, EntityLivingBase ent)`
- `protected void drawGuiContainerBackgroundLayer(float partialTicks, int mouseX, int mouseY)`
- `protected void drawGuiContainerForegroundLayer(int mouseX, int mouseY)`
- `void drawScreen(int mouseX, int mouseY, float partialTicks)`
- `GuiRecipeBook func_194310_f()`
- `protected void handleMouseClick(Slot slotIn, int slotId, int mouseButton, ClickType type)`
- `protected boolean hasClickedOutside(int p_193983_1_, int p_193983_2_, int p_193983_3_, int p_193983_4_)`
- `void initGui()`
- `protected boolean isPointInRegion(int rectX, int rectY, int rectWidth, int rectHeight, int pointX, int pointY)`
- `protected void keyTyped(char typedChar, int keyCode)`
- `protected void mouseClicked(int mouseX, int mouseY, int mouseButton)`
- `protected void mouseReleased(int mouseX, int mouseY, int state)`
- `void onGuiClosed()`
- `void recipesUpdated()`
- `void updateScreen()`

## Fields

- `GuiInventory`
